[gd_scene load_steps=4 format=3 uid="uid://cq6sr8i223r47"]

[ext_resource type="Script" uid="uid://itq7xq3rw6h4" path="res://scripts/main.gd" id="1_jyhfs"]
[ext_resource type="PackedScene" uid="uid://cs146wtlm5oqo" path="res://scenes/object.tscn" id="2_tbgi4"]
[ext_resource type="PackedScene" uid="uid://cxlc2dbb2suxx" path="res://scenes/drop_zone.tscn" id="3_tefeu"]

[node name="world_new" type="Node2D"]
script = ExtResource("1_jyhfs")

[node name="background" type="ColorRect" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1088.0
mouse_filter = 2
color = Color(0.375016, 9.73926e-05, 0.375745, 1)

[node name="CenterPanel" type="Panel" parent="."]
offset_left = 128.0
offset_top = 64.0
offset_right = 1344.0
offset_bottom = 1024.0
mouse_filter = 2

[node name="Rectangle" parent="CenterPanel" instance=ExtResource("2_tbgi4")]
position = Vector2(960, 768)
scale = Vector2(0.5, 0.5)
spawnable = true

[node name="Triangle" parent="CenterPanel" instance=ExtResource("2_tbgi4")]
position = Vector2(616, 768)
scale = Vector2(0.5, 0.5)
object_type = "Triangle"
spawnable = true

[node name="Circle" parent="CenterPanel" instance=ExtResource("2_tbgi4")]
position = Vector2(256, 768)
scale = Vector2(0.5, 0.5)
object_type = "Circle"
spawnable = true

[node name="DropZone1" parent="CenterPanel" instance=ExtResource("3_tefeu")]
position = Vector2(336, 336)
scale = Vector2(0.8, 0.8)

[node name="DropZone2" parent="CenterPanel" instance=ExtResource("3_tefeu")]
position = Vector2(888, 336)
scale = Vector2(0.8, 0.8)

[node name="DropZoneEnd" parent="CenterPanel" instance=ExtResource("3_tefeu")]
position = Vector2(1504, 528)
scale = Vector2(0.8, 0.8)
zone_type = "StarCollector"

[node name="RightPanel" type="Panel" parent="."]
show_behind_parent = true
offset_left = 1408.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 1024.0
mouse_filter = 2

[node name="StarCounterUI" type="Label" parent="."]
offset_left = 1408.0
offset_top = 72.0
offset_right = 1856.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 40
text = "Counter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerUI" type="Label" parent="."]
offset_left = 136.0
offset_top = 64.0
offset_right = 1344.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 30
text = "Time Left : XX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
offset_left = 448.0
offset_top = 320.0
offset_right = 1536.0
offset_bottom = 768.0

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 1024.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 100
text = "Final Score : X Stars"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 384.0
offset_top = 320.0
offset_right = 640.0
offset_bottom = 424.0
text = "Restart Button"
